--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@ably/features-core": "1.2.0-alpha.5",
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.0",
+    "tailwindcss": "^3.2.7",
+    "postcss": "^8.4.21",
+    "autoprefixer": "^10.4.13"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.36.1",
