--- a/package.json
+++ b/package.json
@@ -10,11 +10,8 @@
   "repository": "ably/features-action",
   "license": "Apache-2.0",
   "dependencies": {
-    "@ably/features-core": "1.2.0-alpha.5",
-    "@actions/core": "^1.10.0",
-    "tailwindcss": "^3.2.7",
-    "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.13"
+    "@ably/features-core": "1.2.0-alpha.6",
+    "@actions/core": "^1.10.0"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.36.1",
